tests/sksl/errors/ReservedNameNamespace.glsl
### Compilation failed:

error: 1: 'namespace' is a reserved word
int namespace;
    ^^^^^^^^^
1 error
